Jan 04, 2006: <l-n@users.sourceforge.net>
- add -Wl,--export-dynamic to LDFLAGS as xqf relies on it

Jan 03, 2006: <l-n@users.sourceforge.net>
- add TC:E game types (patch by Steffen Pankratz)
- remove AMS from qstat.cfg, it's native now

Dec 28, 2005: <l-n@users.sourceforge.net>
- add CoD protocol 6

Dec 25, 2005: <l-n@users.sourceforge.net>
- allow to copy server info values

Dec 13, 2005: <l-n@users.sourceforge.net>
- add new armyops master server

Nov 19, 2005: <l-n@users.sourceforge.net>
- fix SOF2 query (thanks to Wiesław Młynarski for reporting)

Nov 12, 2005: <l-n@users.sourceforge.net>
- clean up code duplication in pref.c
- add support for warsow level shots

Nov 01, 2005: <l-n@users.sourceforge.net>
- add gslist Q4 master
- initial Warsow support, partially broken

Oct 27, 2005: <l-n@users.sourceforge.net>
- unescape Q4 clan tags (thanks Gonzalo Nemmi for reporting)

Oct 26, 2005: <l-n@users.sourceforge.net>
- make "Show only configured games" button reappear
- require qstat 2.10

Oct 23, 2005: <l-n@users.sourceforge.net>
- fix Q4 rcon
- change Q4 main mod to q4base
- set rcon password correctly when launching Q4
- version 1.0.4.1

Oct 20, 2005: <l-n@users.sourceforge.net>
- release 1.0.4

Oct 18, 2005: <l-n@users.sourceforge.net>
- use Q4 clan name if it exists

Oct 17, 2005: <l-n@users.sourceforge.net>
- add x86_64 to statistics page
- fix Q4 master server protocol prefs

Oct 09, 2005: <l-n@users.sourceforge.net>
- update NEWS
- show anti-cheat icon for Doom3 and Quake4 (thanks Timothee Besset for
  reporting)
- try to support Quake4 map previews

Oct 07, 2005: <l-n@users.sourceforge.net>
- initial Quake4 support (thanks to Timothee Besset for providing
  the necessary info)

Sep 20, 2005: Jordi Mallach <jordi@sindominio.net>
- update Catalan transaltion

Sep 13, 2005: <l-n@users.sourceforge.net>
- get rid of libtool
- set version to 1.0.3.1
- another attempt to finally fix gensyms.pl

Sep 12, 2005: <l-n@users.sourceforge.net>