@@ -2006,22 +2006,26 @@ static void server_clist_unselect_callback (GtkWidget *widget, int row,
 
 
 /* Deal with key-presses in the server pane */
-static void server_clist_keypress_callback (GtkWidget *widget, GdkEventKey *event)
+static gboolean server_clist_keypress_callback (GtkWidget *widget, GdkEventKey *event)
 
 {
   
   debug (7, "server_clist_keypress_callback() -- CLIST Key %x", event->keyval ); 
   if (event->keyval == GDK_Delete) {
     del_server_callback( widget, event );
+    return TRUE;
   } else if (event->keyval == GDK_Insert ) {
     if (event->state & GDK_SHIFT_MASK ){
       add_to_favorites_callback( widget, event );
     } else {
       add_server_callback (widget, event);
     }
+    return TRUE;
   } else if (event->keyval == GDK_Return || event->keyval == GDK_KP_Enter ) {
     launch_callback( widget, LAUNCH_NORMAL );
+    return TRUE;
   }
+  return FALSE;
 }
 
 static int source_ctree_event_callback (GtkWidget *widget, GdkEvent *event) {
